# pokedex-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  dependencies.py  main.py  models.py
app/clients/: __init__.py  pokeapi_client.py  translation_client.py
app/services/: __init__.py  pokemon_service.py
tests/integration/: test_e2e_api.py  test_with_testcontainers.py
tests/unit/: test_pokeapi_client.py  test_pokemon_service.py  test_translation_client.py
