[tool.poetry]
name = "pokedex-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
pydantic = "^2.12.4"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
requests-mock = "^1.12.1"
black = "^25.11.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"